Renaming multiple objects in the outliner halts the interface #36709

Closed
opened 2013-09-12 13:44:26 +02:00 by JA 12 · 4 comments

%%%After renaming multiple objects in the outliner, the interface locks down and the user is forced to quit Blender. It only outputs errors when quitting (http://www.pasteall.org/45507/text).

I'm pretty sure I have renamed objects like that successfully in the past but it didn't work now in any Blender versions I have. Others who tried it got the same results.

Tried official versions 2.62 - 2.68a and 2.68.5 r60057, Linux 32-bit, nvidia graphics.

Steps for others to reproduce the error:

  • Open Blender, highlight multiple objects in the outliner (but not the scene)
  • right click and choose "rename"
  • start typing new object names, press tab to go to the next one
  • after done, the interface becomes unresponsive.

%%%

%%%After renaming multiple objects in the outliner, the interface locks down and the user is forced to quit Blender. It only outputs errors when quitting (http://www.pasteall.org/45507/text). I'm pretty sure I have renamed objects like that successfully in the past but it didn't work now in any Blender versions I have. Others who tried it got the same results. Tried official versions 2.62 - 2.68a and 2.68.5 r60057, Linux 32-bit, nvidia graphics. Steps for others to reproduce the error: - Open Blender, highlight multiple objects in the outliner (but not the scene) - right click and choose "rename" - start typing new object names, press tab to go to the next one - after done, the interface becomes unresponsive. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%There is more to that, if you use "Return" (enter) instead of tab it works.
If you press Esc, it skips two objects.%%%

%%%There is more to that, if you use "Return" (enter) instead of tab it works. If you press Esc, it skips two objects.%%%

%%%fixed/worked around r60092.%%%

%%%fixed/worked around r60092.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36709
No description provided.