fix/workaround [#36709] Renaming multiple objects in the outliner halts the interface

Only show one edit button at a time (editing multiple buttons at once I never saw in other ui toolkits and its unclear what you change).